--- a/composer.json
+++ b/composer.json
@@ -21,14 +21,20 @@
     "license": "BSD-3-Clause",
     "minimum-stability": "dev",
     "prefer-stable": true,
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/jonsa/ph-php-cs-fixer-config.git"
+        }
+    ],
     "require": {
-        "php": "^7.1.0",
+        "php": "^5.6",
         "ramsey/uuid" : "^3.6.0",
         "beberlei/assert": "^2.7.1"
     },
     "require-dev": {
-        "phpunit/phpunit": "^6.0",
-        "prooph/php-cs-fixer-config": "^0.2",
+        "phpunit/phpunit": "^5.0",
+        "prooph/php-cs-fixer-config": "5.6.x-dev",
         "satooshi/php-coveralls": "^1.0",
         "prooph/bookdown-template": "^0.2.3",
         "malukenho/docheader": "^0.1.4"
